# xiaozhua-health-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.env.example  compose.override.example.yml  docker-compose.yml  pyproject.toml
.github/workflows/: backend-ci.yml
assets/eval/: README.md  action_matrix.v1.json
assets/kb-action/: actions.v1.json
assets/kb-forbid/: forbidden_patterns.v1.json
assets/kb-input-lex/: input-lex.v1.json
assets/kb-syn/: kb-syn.v1.json
assets/kb-tpl/: README.md
docs/: README.md
docs/architecture/: infrastructure-overview.md  overall.md
docs/cases/: health_triage_cases.v1.json
docs/delivery/: tongyi-llm-api-compliance-report.md  wp0-wp5-implementation-consistency-report.md
docs/manual-testing/: api-manual-verification.md
docs/plans/: coze-workflow-dev-plan.md
docs/schema/: xiaozhua_health_agent_input_schema.v1.json  xiaozhua_health_agent_output_schema.v1.json
src/xiaozhua_health_agent/: __init__.py  paths.py
tests/api/: test_health_api.py  test_intelligent_api.py  test_pipeline_http_mapping.py
tests/assets/: test_kb_assets.py
tests/config/: test_path_settings.py  test_pipeline_settings.py
tests/context/: test_derived_facts.py  test_when_evaluator.py
tests/copy/: test_action_lock_enforcer.py  test_draft_parser.py  test_draft_retry.py  test_draft_types.py  test_mechanical_draft.py  test_qwen_client.py  test_template_resolver.py  test_template_substitution.py
tests/eval/: test_action_consistency_validator.py  test_action_matrix.py  test_copy_llm_batch.py  (+2 more)
(+201 files in other folders)
